added layouts for listview. implemented main functionality.

--- a/RSSClient/AndroidManifest.xml
+++ b/RSSClient/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.rssclient.MainActivity"
+            android:name="android.edu.rss.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
